[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/RocketAssembly.gd" type="Script" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Graphics/exhuast_particle.png" type="Texture" id=3]
[ext_resource path="res://Graphics/KevinGrape.png" type="Texture" id=4]
[ext_resource path="res://Graphics/ground.png" type="Texture" id=5]
[ext_resource path="res://Graphics/launch_site.png" type="Texture" id=6]
[ext_resource path="res://Graphics/fuel_status_lh2.png" type="Texture" id=7]
[ext_resource path="res://Graphics/fuel_status_lh2_tank.png" type="Texture" id=8]
[ext_resource path="res://Graphics/fuel_status_lox_tank.png" type="Texture" id=9]
[ext_resource path="res://Graphics/fuel_status_lox.png" type="Texture" id=10]
[ext_resource path="res://Graphics/earth.png" type="Texture" id=11]
[ext_resource path="res://Scenes/PanelTheme.tres" type="Theme" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.10156, 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
//
//uniform float bloomRadius = 1.0;
//uniform float bloomThreshold = 1.0;
//uniform float bloomIntensity = 5.0;
//
//vec3 GetBloomPixel(sampler2D tex, vec2 uv, vec2 texPixelSize) {
//	vec2 uv2 = floor(uv / texPixelSize) * texPixelSize;
//	uv2 += texPixelSize * .001;
//	vec3 tl = max(texture(tex, uv2).rgb - bloomThreshold, 0.0);
//	vec3 tr = max(texture(tex, uv2 + vec2(texPixelSize.x, 0.0)).rgb - bloomThreshold, 0.0);
//	vec3 bl = max(texture(tex, uv2 + vec2(0.0, texPixelSize.y)).rgb - bloomThreshold, 0.0);
//	vec3 br = max(texture(tex, uv2 + vec2(texPixelSize.x, texPixelSize.y)).rgb - bloomThreshold, 0.0);
//	vec2 f = fract( uv / texPixelSize );
//
//	vec3 tA = mix( tl, tr, f.x );
//	vec3 tB = mix( bl, br, f.x );
//
//	return mix( tA, tB, f.y );
//}
//
//vec3 GetBloom(sampler2D tex, vec2 uv, vec2 texPixelSize) {
//	vec3 bloom = vec3(0.0);
//	vec2 off = vec2(1) * texPixelSize * bloomRadius;
//	bloom += GetBloomPixel(tex, uv + off * vec2(-1, -1), texPixelSize * bloomRadius) * 0.292893;
//	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 0), texPixelSize * bloomRadius) * 0.5;
//	bloom += GetBloomPixel(tex, uv + off * vec2(-1, 1), texPixelSize * bloomRadius) * 0.292893;
//	bloom += GetBloomPixel(tex, uv + off * vec2(0, -1), texPixelSize * bloomRadius) * 0.5;
//	bloom += GetBloomPixel(tex, uv + off * vec2(0, 0), texPixelSize * bloomRadius) * 1.0;
//	bloom += GetBloomPixel(tex, uv + off * vec2(0, 1), texPixelSize * bloomRadius) * 0.5;
//	bloom += GetBloomPixel(tex, uv + off * vec2(1, -1), texPixelSize * bloomRadius) * 0.292893;
//	bloom += GetBloomPixel(tex, uv + off * vec2(1, 0), texPixelSize * bloomRadius) * 0.5;
//	bloom += GetBloomPixel(tex, uv + off * vec2(1, 1), texPixelSize * bloomRadius) * 0.292893;
//	bloom /= 4.171573f;
//	return bloom;
//}
//
//void fragment() {
//	vec4 col = texture(TEXTURE, UV);
//	vec3 bloom = GetBloom(TEXTURE, UV, TEXTURE_PIXEL_SIZE);
//	col.rgb += bloom * bloomIntensity;
//	COLOR = col;
//}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Curve" id=4]
max_value = 10.0
_data = [ Vector2( 0, 5 ), 0.0, 0.0, 0, 0, Vector2( 0.662791, 2.90909 ), 0.0, 0.0, 0, 0, Vector2( 1, 10 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.644295, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.851563, 0.851563, 0.851563, 1, 0.329412, 0.329412, 0.329412, 0.258824 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.554545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 0.570313, 0.570313, 0.570313, 1 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.518182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0.316406, 0.316406, 1, 0.460938, 0.39474, 0.13504, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 60, 8.074 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="RocketAssembly" type="Node2D" parent="."]
position = Vector2( 500, -12 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Boss" type="RigidBody2D" parent="RocketAssembly"]
position = Vector2( 0, -25 )
mass = 0.1
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RocketAssembly/Boss"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RocketAssembly/Boss"]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="RocketAssembly/Boss"]
z_index = 1
current = true
zoom = Vector2( 2, 2 )

[node name="GUI" type="Control" parent="RocketAssembly/Boss/Camera2D"]
margin_left = -1024.0
margin_top = -1024.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 1024, 1024 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Panel" parent="RocketAssembly/Boss/Camera2D/GUI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 262.0
margin_bottom = 169.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RocketAssembly/Boss/Camera2D/GUI/Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Altitude" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_right = 214.0
margin_bottom = 14.0
text = "Altitude: "

[node name="VelocityX" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 18.0
margin_right = 214.0
margin_bottom = 32.0
text = "X Velocity: "

[node name="VelocityY" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 36.0
margin_right = 214.0
margin_bottom = 50.0
text = "Y Velocity: "

[node name="Speed" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 54.0
margin_right = 214.0
margin_bottom = 68.0
text = "Speed: "

[node name="Acceleration" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 72.0
margin_right = 214.0
margin_bottom = 86.0
text = "Acceleration: "

[node name="Temperature" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 90.0
margin_right = 214.0
margin_bottom = 104.0
text = "Temperature: "

[node name="Pressure" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Stats/VBoxContainer"]
margin_top = 108.0
margin_right = 214.0
margin_bottom = 122.0
text = "Pressure: "

[node name="Fuel" type="Panel" parent="RocketAssembly/Boss/Camera2D/GUI"]
margin_left = 16.0
margin_top = 189.0
margin_right = 262.0
margin_bottom = 742.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RocketAssembly/Boss/Camera2D/GUI/Fuel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Fuel/VBoxContainer"]
margin_right = 214.0
margin_bottom = 14.0
text = "Stage 2 Fuel"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RocketAssembly/Boss/Camera2D/GUI/Fuel/VBoxContainer"]
margin_top = 22.0
margin_right = 214.0
margin_bottom = 522.0
custom_constants/separation = 0

[node name="LOX" type="TextureProgress" parent="RocketAssembly/Boss/Camera2D/GUI/Fuel/VBoxContainer/VBoxContainer"]
margin_left = 82.0
margin_right = 132.0
margin_bottom = 150.0
size_flags_horizontal = 4
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 3

[node name="LH2" type="TextureProgress" parent="RocketAssembly/Boss/Camera2D/GUI/Fuel/VBoxContainer/VBoxContainer"]
margin_left = 82.0
margin_top = 150.0
margin_right = 132.0
margin_bottom = 500.0
size_flags_horizontal = 4
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="Progress" type="Panel" parent="RocketAssembly/Boss/Camera2D/GUI"]
margin_left = 277.0
margin_top = 16.0
margin_right = 1012.0
margin_bottom = 122.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RocketAssembly/Boss/Camera2D/GUI/Progress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RocketAssembly/Boss/Camera2D/GUI/Progress/HBoxContainer"]
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 0 )
texture = ExtResource( 11 )
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="RocketAssembly/Boss/Camera2D/GUI/Progress/HBoxContainer"]
margin_left = 94.0
margin_top = 29.0
margin_right = 719.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.0

[node name="Keys" type="Panel" parent="RocketAssembly/Boss/Camera2D/GUI"]
margin_left = 868.0
margin_top = 138.0
margin_right = 1012.0
margin_bottom = 335.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Keys"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "W/Up - Throttle

A/Left - Pivot Counterclockwise

D/Right - Pivot Clockwise

Space Bar - Stage Separation"
autowrap = true

[node name="Money" type="Panel" parent="RocketAssembly/Boss/Camera2D/GUI"]
margin_left = 868.0
margin_top = 352.0
margin_right = 1012.0
margin_bottom = 414.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RocketAssembly/Boss/Camera2D/GUI/Money"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "MONEY RAISED
$"
align = 1
autowrap = true

[node name="CanvasLayer" type="CanvasLayer" parent="RocketAssembly/Boss/Camera2D/GUI"]
offset = Vector2( 380, 150 )
transform = Transform2D( 1, 0, 0, 1, 380, 150 )

[node name="Win" type="AcceptDialog" parent="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer"]
margin_left = -133.0
margin_top = -892.0
margin_right = 209.0
margin_bottom = -715.0
popup_exclusive = true
window_title = "You Won!"
dialog_text = "Congratulations, you successfully sent your boss into orbit!

Thankfully, he won't be coming down any time soon, so you won't have to worry about being fired.

Thanks for playing, you may accept this dialog to be redirected to the main menu."
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="Lose" type="AcceptDialog" parent="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer"]
margin_left = -133.0
margin_top = -874.0
margin_right = 209.0
margin_bottom = -714.0
popup_exclusive = true
window_title = "Try Again"
dialog_text = "Your boss has departed the rocket, but he has not been placed into a stable orbit.

You have however been given extra funds to build an even bigger rocket next time...

Accept this dialog to try again!"
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="GameOver" type="AcceptDialog" parent="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer"]
margin_left = -133.0
margin_top = -874.0
margin_right = 209.0
margin_bottom = -714.0
popup_exclusive = true
window_title = "Game Over!"
dialog_text = "Your rocket has reached conditions too extreme to handle...and has suffered a loss of crew.

This could either mean extremely high accelerations or temperatures. Make sure this doesn't happen next time!

Accept this dialog to return to the main menu and restart."
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="Exhaust" type="CPUParticles2D" parent="RocketAssembly/Boss"]
show_behind_parent = true
material = SubResource( 3 )
position = Vector2( -236.235, -308.157 )
scale = Vector2( 0.35, 0.35 )
emitting = false
amount = 2048
lifetime = 0.03
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 0, 1 )
spread = 0.0
initial_velocity = 500.0
initial_velocity_random = 1.0
angle_random = 1.0
scale_amount = 0.05
scale_amount_random = 0.05
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="SonicBoom" type="CPUParticles2D" parent="RocketAssembly/Boss"]
show_behind_parent = true
scale = Vector2( 0.1, 0.1 )
z_index = -1
emitting = false
amount = 128
lifetime = 0.1
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 25, 25 )
direction = Vector2( 0, 1 )
spread = 70.0
initial_velocity = 1000.0
scale_amount = 10.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Explosion" type="CPUParticles2D" parent="RocketAssembly/Boss"]
emitting = false
amount = 1024
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
damping = 100.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 9 )
hue_variation = 0.16
hue_variation_random = 0.35

[node name="Zoom" type="Tween" parent="RocketAssembly/Boss"]

[node name="PinJoints" type="Node2D" parent="RocketAssembly/Boss"]

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 500, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 1.41418, 80.6102 )
scale = Vector2( 10, 10 )
shape = SubResource( 10 )

[node name="LaunchSite" type="Sprite" parent="Ground"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )
offset = Vector2( 0, -270 )

[node name="Ground1" type="Sprite" parent="Ground"]
position = Vector2( -384, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
offset = Vector2( 0, 460 )

[node name="Ground2" type="Sprite" parent="Ground"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
offset = Vector2( 0, 460 )

[node name="Ground3" type="Sprite" parent="Ground"]
position = Vector2( 384, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
offset = Vector2( 0, 460 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
polygon = PoolVector2Array( -41.75, 0, -29.9375, -12, 29.9375, -12.0625, 41.875, -0.0625 )

[connection signal="confirmed" from="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer/Win" to="." method="_on_Win_confirmed"]
[connection signal="confirmed" from="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer/Lose" to="." method="_on_Lose_confirmed"]
[connection signal="confirmed" from="RocketAssembly/Boss/Camera2D/GUI/CanvasLayer/GameOver" to="." method="_on_GameOver_confirmed"]
